apps/media/bazarr/service.yml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  selector:
    app: bazarr
  ports:
    - name: webui
      port: 6767
      targetPort: 6767
