apps/media/bazarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bazarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.thijsvdweijer.nl`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: bazarr-tls
